[package]
name = "virustotal"
version = "0.1.2"
authors = ["Chihiro Hasegawa <encry1024@gmail.com>"]
license = "MIT"
description = "The library for VirusTotal Public API 2.0"
repository = "https://github.com/owlinux1000/virustotal.rs"
readme = "README.md"
keywords = ["rust", "virustotal"]

[dependencies]
reqwest = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
